--- a/index.html
+++ b/index.html
@@ -3,4 +3,7 @@
 <head>
 </head>
 <body>
+
 </body>
+<script src="main.js"></script>
+<script src="https://unpkg.com/@supabase/supabase-js@2"></script>
