--- a/index.html
+++ b/index.html
@@ -1,9 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
+	<div>
+		WELCOME!
+	</div>
+	<div id="page_start">
+		<div>Enter your role</div>
+		<button onclick="init(0)">Admin (Broadcaster)</button>
+		<button onclick="init(1)">Listener (Receiver)</button>
+	</div>
+	<div id="page_admin">
+		<div>My ID: </div>
+		<div id="ownID"></div>
+		<div>
+			<button onclick="start_stopwatch()">Start Timer</button>
+		</div>
+		<div>
+			<div>Timer display (origin: 2mins) :</div>
+			<div id="timer_display"></div>
+		</div>
+	</div>
+	<div id="page_receiver">
+		<div>Enter broadcaster ID</div>
+		<div>
+			<input id="senderID">
+			<button id="submitID" onclick="init_receiver()">submit</button>
+		</div>
+		<button id="sendbutton1" onclick="testsend1();">Send Message 1</button>
+	</div>
+	<div>---Message zone---</div>
+		<div id="messages">
+		</div>
 
 </body>
 <script src="main.js"></script>
-<script src="https://unpkg.com/@supabase/supabase-js@2"></script>
+<script src="https://unpkg.com/peerjs@1.5.0/dist/peerjs.min.js"></script>
+<script>initialize()</script>
