--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<button id="sendbutton1" onclick="testsend1();">Send Message 1</button>
 	</div>
 	<div>---Message zone---</div>
-		<div id="messages">
+		<div id="message">
 		</div>
 
 </body>
