--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<div id="ownID"></div>
 		<div>
 			<button onclick="start_stopwatch()">Start Timer</button>
+			<button onclick="reset_stopwatch()">Reset timer</button>
 		</div>
 		<div>
 			<div>Timer display (origin: 2mins) :</div>
