--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<div>
+	<div id="status">
 		WELCOME!
 	</div>
 	<div id="page_start">
