--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 	<div id="main-body">
 		<div id="status">
-			Welcome!
+			Loading...
 		</div>
 		<div id="page_start">
 			<div id="page_start_inner">
