--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 				</div>
 			</div>
 			<div class="section line" id="page_receiver_2" style="display:none">
-				<div id="page_receiver_msg"></div>
+				<div id="page_receiver_msg" style="font-size:0.8rem;color:#666"></div>
 			</div>
 			<div class="section">
 				<button id="sendbutton1" onclick="testsend1();">Send Message 1</button>
