--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
 						<a class="button tinybutton">Fullscreen</a>
 					</div>
 			</div>
+			<div id="div_timer_controls_receiver">
+				<a class="button tinybutton"><i class="fas fa-expand" onclick="fullscreen();"></i>Fullscreen</a>
+			</div>
 			<div id="div_timer_inner">
 				<div id="timer_status">Countdown is running:</div>
 				<div id="timer_display"></div>
