--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 			</div>
 		</div>
 		<div id="page_receiver">
-			<div class="section line" id="page_receiver_1">
+			<div class="section" id="page_receiver_1">
 				<div>Enter host ID manually:</div>
 				<div>
 					<input id="senderID">
