--- a/index.html
+++ b/index.html
@@ -114,6 +114,13 @@
 				<div id="timer_status">Countdown is running:</div>
 				<div id="timer_display"></div>
 			</div>
+			<div id="div_label">
+				<div id="div_label_input" style="text-align:center">
+					<div>Enter a label or message:</div>
+					<input id="label_input" oninput="sender_label_debounce()">
+				</div>
+				<div id="div_label_output"></div>
+			</div>
 		</div>
 		<div id="page_msg">
 			<div>---Message zone---</div>
