--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 	<link rel="stylesheet" href="styles.css">
 	<link href="css/fontawesome.min.css" rel="stylesheet"> 
 	<link href="css/regular.min.css" rel="stylesheet"> 
