--- a/index.html
+++ b/index.html
@@ -180,5 +180,6 @@
 </body>
 <script src="main.js"></script>
 <script src="index.js"></script>
-<script src="https://unpkg.com/peerjs@1.5.0/dist/peerjs.min.js"></script>
+<!--<script src="https://unpkg.com/peerjs@1.5.0/dist/peerjs.min.js"></script>-->
+<script src="/socket.io/socket.io.js"></script>
 <script>initialize()</script>
