--- a/index.html
+++ b/index.html
@@ -181,5 +181,8 @@
 <script src="main.js"></script>
 <script src="index.js"></script>
 <!--<script src="https://unpkg.com/peerjs@1.5.0/dist/peerjs.min.js"></script>-->
-<script src="/socket.io/socket.io.js"></script>
+<script src="https://cdn.socket.io/4.8.1/socket.io.min.js" integrity="sha384-mkQ3/7FUtcGyoppY6bz/PORYoGqOl7/aSUMn2ymDOJcapfS6PHqxhRTMh1RR0Q6+" crossorigin="anonymous"></script>
+<script>
+	const socket = io("https://oscetimer-server.onrender.com");
+</script>
 <script>initialize()</script>
