--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 		</div>
 </body> 
 <script src="https://cdn.socket.io/4.8.1/socket.io.min.js" integrity="sha384-mkQ3/7FUtcGyoppY6bz/PORYoGqOl7/aSUMn2ymDOJcapfS6PHqxhRTMh1RR0Q6+" crossorigin="anonymous"></script>
-<script src="main.js" type="module"></script>
+<script src="main.js" type="/module"></script>
 <script src="index.js"></script>
 <script>
 let wakeLock = null; //sentinel
